Changed size test and benchmark to use events more adherent to real world use cases